# nautobot-app-design-builder

./: .bandit.yml  .cookiecutter.json  .flake8  .gitignore  .yamllint.yml  README.md  invoke.example.yml  invoke.mysql.yml  invoke.nautobot_2.yml  lcov.info  mkdocs.yml  pyproject.toml  tasks.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  upstream_testing.yml
changes/: +ci.housekeeping  +nautobot-app-v2-4-2.housekeeping  146.added  196.added  196.housekeeping  204.fixed  212.fixed  217.fixed  218.changed  218.fixed  219.added  219.documentation  221.housekeeping  228.housekeeping  229.documentation  234.added  244.housekeeping  248.changed  253.housekeeping  258.fixed  264.documentation  265.documentation  268.fixed  270.added  273.fixed  287.fixed  bgp-models-endpoint-enhancement.added
design_builder/: __init__.py  base.py  choices.py  context.py  design.py  errors.py  ext.py  fields.py  filters.py  forms.py  git.py  helpers.py  jinja2.py  logging.py  models.py  navigation.py  signals.py  tables.py  urls.py  util.py  views.py
design_builder/api/: nested_serializers.py  serializers.py  urls.py  views.py
design_builder/contrib/: ext.py
design_builder/contrib/tests/: test_ext.py
design_builder/management/commands/: build_design.py  populate_sample_data.py
design_builder/migrations/: 0001_initial.py
design_builder/templates/design_builder/: designinstance_retrieve.html  journal_retrieve.html
design_builder/tests/: __init__.py  test_api.py  test_builder.py  test_context.py  test_data_sources.py  test_design_job.py  test_errors.py  test_ext.py  test_jinja.py  test_model_design.py  test_model_design_instance.py  test_model_journal.py  test_model_journal_entry.py  test_views.py  util.py
design_builder/tests/designs/: context.py  multi_design_job.py  multi_design_job_with_error.py  simple_design.py  simple_design_report.py  test_designs.py
development/: Dockerfile  development.env  docker-compose.base.yml  docker-compose.designs-v2.yml  docker-compose.designs.yml  docker-compose.dev.yml  docker-compose.git-server.yml  docker-compose.mysql.yml  docker-compose.test-designs.yml  git-entrypoint.sh  nautobot_config.py  towncrier_template.j2
docs/admin/: compatibility_matrix.md  install.md  uninstall.md  upgrade.md
docs/admin/release_notes/: version_1.0.md  version_1.1.md  version_1.2.md  version_1.3.md  version_1.4.md  version_2.0.md  version_2.1.md  version_2.2.md  version_2.3.md  version_3.0.md  version_3.1.md
docs/assets/: abbreviations.md
docs/dev/: contributing.md  dev_environment.md  extending.md  release_checklist.md  template_extensions.md
docs/dev/code_reference/: api.md  context.md  design.md  design_job.md  ext.md  fields.md  jinja2.md  jinja_filters.md  package.md  testing.md  util.md
docs/models/: design.md
docs/user/: app_getting_started.md  app_overview.md  design_development.md  design_job_testing.md  design_lifecycle.md  design_quickstart.md  design_testing.md  faq.md  git_config_context.md
examples/: README.md
examples/backbone_design/designs/: core_site_context.py  core_site_design.py  designs.py  initial_design.py  jobs.py  jobs_v2.py
examples/backbone_design/jobs/: designs.py
examples/custom_design/designs/: jobs.py
examples/custom_design/jobs/: designs.py
examples/example_design/: .gitignore  README.md  invoke.example.yml  invoke.mysql.yml  pyproject.toml  tasks.py
examples/example_design/.devcontainer/: Dockerfile  Dockerfile.git-server  creds.example.env  devcontainer.json  docker-compose.yml  initialize.sh  install_additional.sh  nautobot_config.py  post_create.sh  requirements.txt
examples/example_design/designs/: basic_design.py  context.py  designs.py  jobs.py
examples/example_design/jobs/: designs.py  (+1 more)
examples_v2/backbone_design/: README.md
examples_v2/excel_files/: coolkitt_data_import.xlsx
my_plugin/: __init__.py
my_plugin/api/: __init__.py
my_plugin/tests/: __init__.py  test_api.py  test_basic.py
nautobot_design_builder/: __init__.py  base.py  changes.py  choices.py  constants.py  context.py  custom_validators.py  debug.py  design.py  design_job.py  errors.py  ext.py  fields.py  filters.py  forms.py  helpers.py  jinja2.py  jinja_filters.py  jobs.py  logging.py  middleware.py  models.py  navigation.py  recursive.py  signals.py  tables.py  template_content.py  testing.py  urls.py  util.py  views.py
nautobot_design_builder/api/: __init__.py  nested_serializers.py  serializers.py  urls.py  views.py
nautobot_design_builder/contrib/: __init__.py  ext.py
nautobot_design_builder/migrations/: 0001_initial.py  0002_auto_20231124_0936.py  0002_auto_20231124_1525.py  0002_nautobot_v2.py  0002_statuses.py  0002_tune_design_models.py  0003_alter_journalentry_unique_together.py  0003_auto_20240102_2218.py  0003_tune_design_models.py  0004_alter_journal_job_result.py  0004_auto_20240208_0814.py  0004_auto_20240215_1109.py  0004_journal_builder_output.py  0005_auto_20240405_0938.py  0005_auto_20240410_0734.py  0005_auto_20240415_0455.py  0005_journal_active.py  0006_alter_designinstance_status.py  0006_auto_20240429_0503.py  0006_journalentry_active.py  0006_remove_designinstance_owner.py  0007_alter_journal_job_result.py  0007_auto_20240430_1235.py  0007_design_description.py  0008_auto_20240409_1315.py  0008_auto_20240502_0511.py
nautobot_design_builder/templatetags/: __init__.py  utils.py
nautobot_design_builder/tests/: __init__.py  fixtures.py  test_api.py  test_api_views.py  test_basic.py  test_builder.py  test_changes.py  test_context.py  test_data_protection.py  test_data_sources.py  test_decommissioning_job.py  test_design_job.py  test_errors.py  test_ext.py  test_filter_design.py  test_filters.py  test_form_design.py  test_inject_uuids.py  test_jinja.py  test_model_change_record.py  test_model_change_set.py  test_model_deployment.py  test_model_design.py  test_model_design_instance.py  test_model_journal.py  test_model_journal_entry.py  test_models.py  test_recursive.py  test_reduce.py  test_views.py  util.py
(+195 files in other folders)
